# discord-cleanup-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_and_push.yaml  lint.yaml  test.yaml
discord_cleanup_bot/: __init__.py  __main__.py  bot.py  utils.py
examples/: docker-compose.yaml
tests/: test_utils.py
